# falcon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh  run.sh
GLTutorial/: lighting.fs  lighting.vs  main.cpp  shader.fs  shader.h  shader.vs
GLTutorial.xcodeproj/: project.pbxproj
GLTutorial.xcodeproj/xcshareddata/xcschemes/: GLTutorial.xcscheme
GLTutorial.xcodeproj/xcuserdata/kazijawad.xcuserdatad/xcschemes/: xcschememanagement.plist
GLTutorial/Core/: Camera.h  Mesh.h  Model.h  Program.h  program.h
GLTutorial/Programs/: blending.fs  depth.vs  depth_test.fs  discard.fs  framebuffer.fs  framebuffer.vs  hdr.fs  hdr.vs  lighting.fs  lighting.vs  model.fs  model.gs  model.vs  pbr.fs  shadow.fs  shadow.vs  single_color.fs  skybox.fs  skybox.vs  yellow.fs
assets/meshes/box/: license.txt  scene.gltf
assets/meshes/cornell_box/: license.txt  scene.gltf
assets/meshes/dragon/: license.txt  scene.gltf
assets/shaders/normal/: fragment.glsl  vertex.glsl
assets/shaders/pbr/: fragment-map.glsl  fragment.glsl  vertex.glsl
cmake/: CopyAssets.cmake
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: gl.h
ext/stb/: stb_image_write.h
ext/whereami/: CMakeLists.txt
include/: camera.h  mesh.h  model.h  program.h
include/falcon/: falcon.h
include/falcon/cameras/: orthographic_camera.h  perspective_camera.h
include/falcon/controls/: orbit_controls.h
include/falcon/core/: camera.h  geometry.h  light.h  material.h  mesh.h  renderer.h  texture.h  transform.h
include/falcon/geometries/: cube.h  plane.h
include/falcon/lights/: directional_light.h  point_light.h
include/falcon/loaders/: gltf_loader.h
include/falcon/materials/: normal_material.h  pbr_material.h
include/falcon/textures/: image_texture.h
include/falcon/utils/: file_utils.h
include/poly/: camera.h  mesh.h  model.h  renderer.h
include/poly/core/: camera.h  geometry.h  material.h  mesh.h  program.h  renderer.h  transform.h
include/poly/geometries/: cube.h  plane.h
include/poly/loaders/: gltf_loader.h
include/poly/materials/: normal_material.h  pbr_material.h  shader_material.h
include/poly/utils/: file_utils.h
include/polyhedron/: polyhedron.h
include/polyhedron/cameras/: orthographic_camera.h  perspective_camera.h
include/polyhedron/controls/: orbit_controls.h
include/polyhedron/core/: camera.h  geometry.h  light.h  material.h  mesh.h  program.h  renderer.h  texture.h  transform.h
include/polyhedron/geometries/: cube.h  plane.h
include/polyhedron/lights/: directional_light.h  point_light.h
include/polyhedron/loaders/: gltf_loader.h
include/polyhedron/materials/: normal_material.h  pbr_material.h  shader_material.h
include/polyhedron/textures/: image_texture.h
include/polyhedron/utils/: file_utils.h
lib/: camera.cpp  mesh.cpp  model.cpp  program.cpp  renderer.cpp
lib/cameras/: orthographic_camera.cpp  perspective_camera.cpp
lib/controls/: orbit_controls.cpp
lib/core/: camera.cpp  geometry.cpp  light.cpp  material.cpp  mesh.cpp  program.cpp  renderer.cpp  texture.cpp  transform.cpp
lib/geometries/: cube.cpp  plane.cpp
lib/lights/: directional_light.cpp  point_light.cpp
lib/loaders/: gltf_loader.cpp
lib/materials/: normal_material.cpp  pbr_material.cpp  shader_material.cpp
lib/textures/: image_texture.cpp
lib/utils/: file_utils.cpp
src/: main.cpp  model.cpp  pbr.fs  pbr.vs
src/ext/glad/: CMakeLists.txt
src/ext/stb/: stb_image.h  stb_image_write.h
src/ext/tinygltf/: tiny_gltf.h
src/ext/whereami/: CMakeLists.txt
src/falcon/: falcon.h
src/falcon/cameras/: orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h
src/falcon/cmd/: falcon.cpp
src/falcon/controls/: orbit_controls.cpp  orbit_controls.h
src/falcon/core/: camera.cpp  camera.h  geometry.cpp  geometry.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  texture.cpp  texture.h  transform.cpp  transform.h
src/falcon/geometries/: cube.cpp  cube.h  plane.cpp  plane.h
src/falcon/lights/: directional_light.cpp  directional_light.h  point_light.cpp  point_light.h
src/falcon/loaders/: gltf_loader.cpp  gltf_loader.h
src/falcon/materials/: normal_material.cpp  normal_material.h  pbr_material.cpp  pbr_material.h
src/falcon/render/: window.cpp  window.h
src/falcon/textures/: image_texture.cpp  image_texture.h
src/falcon/utils/: file_utils.cpp  file_utils.h
